added update functionality for templates
