# openapi/expense_tracker_openapi.json
@@ -714,6 +714,54 @@
           }
         ]
       },
+      "put": {
+        "tags": [
+          "Templates"
+        ],
+        "summary": "Update both template name and template currency.",
+        "operationId": "update_template",
+        "parameters": [
+          {
+            "name": "template_id",
+            "in": "path",
+            "description": "Database id for the pot template.  ",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            }
+          }
+        ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/PotTemplateUpdateDTO"
+              }
+            }
+          },
+          "required": true
+        },
+        "responses": {
+          "202": {
+            "description": "The template has been updated."
+          },
+          "403": {
+            "description": "Indicates that the user is not authorized to update the given pot template."
+          },
+          "404": {
+            "description": "Indicates that the desired pot template does not exists."
+          },
+          "409": {
+            "description": "Indicates that the desired pot template can't be updated."
+          }
+        },
+        "security": [
+          {
+            "bearer": []
+          }
+        ]
+      },
       "delete": {
         "tags": [
           "Templates"
@@ -1175,6 +1223,30 @@
             "items": {
               "$ref": "#/components/schemas/UserDTO"
             }
+          }
+        }
+      },
+      "PotTemplateUpdateDTO": {
+        "type": "object",
+        "properties": {
+          "cron_expression": {
+            "type": [
+              "string",
+              "null"
+            ]
+          },
+          "default_currency_id": {
+            "type": [
+              "integer",
+              "null"
+            ],
+            "format": "int32"
+          },
+          "name": {
+            "type": [
+              "string",
+              "null"
+            ]
           }
         }
       },
